Updating BIP32 Gen
